# goflow2-exporter

./: .beans.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  ASN_SETUP.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.standalone  GRAFANA_TEMPLATE.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  grafana-dashboard-template.py  grafana-dashboard.json  prometheus.yml  pyproject.toml
.beans/: goflow2-exporter-0ym0--move-record-rate-gauge-to-collector-metrics-sectio.md  goflow2-exporter-9fcu--update-readmemd-to-reflect-current-metrics.md  goflow2-exporter-mxaj--clean-up-untracked-files-and-update-gitignore.md  goflow2-exporter-vsbo--finish-and-commit-grafana-dashboard-subnet-time-se.md
examples/: goflow2-aggregator.service  goflow2-exporter.service  metrics.prom  sample.json  sample_flow.json  test.sh
scripts/: download-asn-db.sh
src/: asn.rs  bounded_tracker.rs  flow.rs  flow_correlator.rs  l7_classifier.rs  lib.rs  main.rs  metrics.rs  stdin_reader.rs  tcp_flags.rs
test_data/: README.md  create_test_db.py  test-asn.mmdb
tests/: integration_tests.rs
